--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div id="header-outer" class="outer">
     <div id="header-title" class="inner">
       <h1 id="logo-wrap">
-        <a href="/" id="logo">周均宏</a>
+        <a href="/" id="logo">何浩然</a>
       </h1>
       
     </div>
